radio button spacing issue fixed temp

--- a/src/Components/TaskHistory.css
+++ b/src/Components/TaskHistory.css
@@ -26,7 +26,22 @@
 }
 
 .taskHistoryBoxes span {
-  margin-left: 4px;
   font-weight: 600;
   color: #4869b0;
+  vertical-align: middle;
+}
+
+.taskHistoryBoxes input {
+  height: 24px;
+  width: 24px;
+  border: solid 2px #fd9a00;
+  margin-left: 5px;
+  vertical-align: middle;
+}
+
+@media (max-width: 767.98px) {
+  .taskHistoryBoxes {
+    display: grid;
+    grid-template-columns: 100%;
+  }
 }
