--- a/src/Components/TaskList.css
+++ b/src/Components/TaskList.css
@@ -88,7 +88,8 @@ select {
 .taskNboxes li input {
   height: 24px;
   width: 24px;
-  border: solid 2px red;
+  border: solid 2px #fd9a00;
+  margin-left: 5px;
 }
 
 .taskNboxes li span {
